fix: Fix more quality issues